javadoc generation fixed
Signed-off-by: Dmitry Kornilov <dmitry.kornilov@oracle.com>